--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx vite-node index.ts",
+    "watch": "npx tsx watch ./index.ts"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
   "homepage": "https://github.com/Nufeen/nodejs-tooling-talk-2023#readme",
   "dependencies": {
     "fastify": "^4.11.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18"
   }
 }
