--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx vite-node index.ts",
-    "watch": "npx tsx watch ./index.ts"
+    "start": "npx ts-node index.ts",
+    "watch": "npx tsx watch ./index.ts",
+    "debug": "node --inspect --require ts-node/register index.ts"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,11 @@
   },
   "homepage": "https://github.com/Nufeen/nodejs-tooling-talk-2023#readme",
   "dependencies": {
-    "fastify": "^4.11.0"
+    "fastify": "^4.11.0",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18"
+    "@types/node": "^18.11.18",
+    "ts-node": "^10.9.1"
   }
 }
