--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module" ,
   "scripts": {
     "start": "npx ts-node index.ts",
     "watch": "npx tsx watch ./index.ts",
@@ -19,6 +20,8 @@
   },
   "homepage": "https://github.com/Nufeen/nodejs-tooling-talk-2023#readme",
   "dependencies": {
+    "@fastify/swagger": "^8.3.1",
+    "@fastify/swagger-ui": "^1.6.0",
     "fastify": "^4.11.0",
     "typescript": "^4.9.4"
   },
