--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,10 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig",
     "display": "Node 18",
-  
     "compilerOptions": {
-      "lib": ["es2021"],
-      "module": "commonjs",
-      "target": "es2021",
-  
+      "lib": ["es2022"],
+      "module": "es2022",
+      "target": "es2022",
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
