--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module" ,
+  "type": "module",
   "scripts": {
     "start": "npx ts-node index.ts",
     "watch": "npx tsx watch ./index.ts",
@@ -23,6 +23,7 @@
     "@fastify/swagger": "^8.3.1",
     "@fastify/swagger-ui": "^1.6.0",
     "fastify": "^4.11.0",
+    "fastify-metrics": "^10.3.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
